<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        
        <item
            android:id="@+id/nav_tracking"
            android:icon="@drawable/ic_tracking"
            android:title="@string/nav_tracking" />
        
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_schedule" />
        
        <item
            android:id="@+id/nav_checkin"
            android:icon="@drawable/ic_checkin"
            android:title="@string/nav_checkin" />
        
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notifications" />
        
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />
    </group>
    
    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_profile" />
            
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>
    
    <item android:title="Actions">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>

