<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_tracking"
        android:icon="@drawable/ic_tracking"
        android:title="@string/nav_tracking" />
    
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/nav_schedule" />
    
    <item
        android:id="@+id/nav_checkin"
        android:icon="@drawable/ic_checkin"
        android:title="@string/nav_checkin" />
    
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_notifications" />
</menu>

